# portofoliu-laborator-iot-BitsByToader

./: README.md
Lab1/proj1/.cache/clangd/index/: main.c.E19CA1225274C7D2.idx
Lab1/proj1/main/: main.c
Lab2/: udp_sender.py
Lab2/proj/main/: main.c
Lab3/: server.py  versioning.py
Lab3/proj/: ca_cert.pem  ca_key.pem
Lab3/proj/main/: CMakeLists.txt  main.c  version.h
Lab4/proj/main/: main.c
